website/versioned_docs/version-0.2.x/client-setup.mdx
import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

# Client setup

<head>
  <meta name="robots" content="noindex" />
  <meta name="googlebot" content="noindex" />
</head>

## Compiling the composite

In order to interact with a composite at runtime, it is first necessary to create a runtime composite definition file that will be used to configure the client.

<Tabs
  defaultValue="api"
  groupId="api-or-cli"
  values={[
    {label: 'Using the CLI', value: 'cli'},
    {label: 'Using the API', value: 'api'},
  ]}>
  <TabItem value="api">

Make sure you have the `composedb` packages [installed](installation.mdx), before running the code below.

```js
import { CeramicClient } from '@ceramicnetwork/http-client'
import { writeEncodedCompositeRuntime } from '@composedb/devtools-node'

// Replace by the URL of the Ceramic node you want to deploy the models to
const ceramic = new CeramicClient('http://localhost:7007')

// Replace by the path to the local encoded composite file
await writeEncodedCompositeRuntime(
  ceramic,
  'my-first-composite.json',
  'src/__generated__/definition.js'
)
```

More details: [`writeEncodedCompositeRuntime`](./api/modules/devtools_node.md#writeencodedcompositeruntime)

  </TabItem>
  <TabItem value="cli">

```sh
composedb composite:compile my-first-composite.json src/__generated__/definition.js --ceramic-url=http://localhost:7007
```

  </TabItem>
</Tabs>

## Configuring the client

Once the composite definition file is written, for example in `src/__generated__/definition.js` using the example above, it can be imported in the app to configure the client.

Make sure you have the `composedb` packages [installed](installation.mdx), before running the code below.

```js title="src/compose.js"
import { ComposeClient } from '@composedb/client'

import { definition } from './__generated__/definition.js'

export const compose = new ComposeClient({ ceramic: 'http://localhost:7007', definition })
```

More details: [`ComposeClient`](./api/classes/client.ComposeClient.md)

## Executing queries

The [`ComposeClient`](./api/classes/client.ComposeClient.md) instance created in the previous step can be used to execute GraphQL queries using a schema automatically generated from the runtime composite definition.

```js
await compose.executeQuery(`
  query {
    viewer {
      id
    }
  }
`)
```

More details: [`executeQuery`](./api/classes/client.ComposeClient.md#executequery)
